--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@hot-loader/react-dom": "16.8.4",
         "@loadable/component": "5.14.1",
         "@loadable/server": "5.14.0",
+        "@material-ui/core": "4.11.3",
         "b_": "1.3.4",
         "babel-polyfill": "6.26.0",
         "compression": "1.7.4",
