--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "express": "4.17.1",
         "history": "4.9.0",
         "immer": "6.0.3",
+        "query-string": "7.0.0",
         "react": "17.0.1",
         "react-dom": "17.0.1",
         "react-helmet": "6.1.0",
