--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
         "postcss-loader": "3.0.0",
         "postcss-modules": "1.4.1",
         "postcss-nested": "4.1.2",
+        "postcss-preset-env": "6.7.0",
         "prettier": "2.0.4",
         "pretty-quick": "3.1.0",
         "rimraf": "2.6.3",
