--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     },
     "scripts": {
         "clean": "rimraf dist",
+        "stylelint": "npx stylelint \"**/*.css\" --fix",
         "build": "NODE_ENV=production NODE_PATH=. npm run clean && webpack --mode production",
         "format": "prettier --write \"src/**/*.{ts,tsx}\" \"webpack/**/*.ts\"",
         "check-types": "tsc --noEmit",
@@ -34,6 +35,10 @@
         "express": "4.17.1",
         "history": "4.9.0",
         "immer": "6.0.3",
+        "postcss-easy-import": "3.0.0",
+        "postcss-nested-props": "2.0.0",
+        "postcss-short": "5.0.0",
+        "precss": "4.0.0",
         "query-string": "7.0.0",
         "react": "17.0.1",
         "react-dom": "17.0.1",
@@ -45,6 +50,7 @@
         "redux": "4.0.1",
         "redux-saga": "1.0.2",
         "slick-carousel": "1.8.1",
+        "sugarss": "3.0.3",
         "webpack-dev-middleware": "3.7.2",
         "webpack-hot-middleware": "2.24.3"
     },
@@ -96,6 +102,7 @@
         "npm-run-all": "4.1.5",
         "null-loader": "4.0.1",
         "postcss": "7.0.14",
+        "postcss-cli": "8.3.1",
         "postcss-custom-media": "7.0.7",
         "postcss-import": "12.0.1",
         "postcss-import-alias-resolver": "0.1.1",
@@ -104,11 +111,14 @@
         "postcss-modules": "1.4.1",
         "postcss-nested": "4.1.2",
         "postcss-preset-env": "6.7.0",
+        "postcss-utilities": "0.8.4",
         "prettier": "2.0.4",
         "pretty-quick": "3.1.0",
         "rimraf": "2.6.3",
         "source-map-loader": "0.2.4",
         "style-loader": "0.23.1",
+        "stylelint": "13.13.0",
+        "stylelint-config-standard": "22.0.0",
         "ts-loader": "6.2.2",
         "tsconfig-paths-webpack-plugin": "3.2.0",
         "type-fest": "0.17.0",
