[Playground Item::Choose]: Implemented the logic for tacking the elements from the list.

--- a/src/common/store/ducks/playground/mocks/config.json
+++ b/src/common/store/ducks/playground/mocks/config.json
@@ -1,24 +1,24 @@
 {
     "config": {
         "moods": [
-            { "title": "Happy \uD83D\uDE0D" },
-            { "title": "Sad \uD83D\uDE1E" },
-            { "title": "Delighted \uD83D\uDE0B" },
-            { "title": "Stressed \uD83D\uDE33" },
-            { "title": "Relaxed \uD83D\uDE0C" },
-            { "title": "Irritated \uD83D\uDE12" },
-            { "title": "Angry \uD83D\uDE21" },
-            { "title": "In love ❤" }
+            { "id": 1, "title": "Happy \uD83D\uDE0D" },
+            { "id": 2, "title": "Sad \uD83D\uDE1E" },
+            { "id": 3, "title": "Delighted \uD83D\uDE0B" },
+            { "id": 4, "title": "Stressed \uD83D\uDE33" },
+            { "id": 5, "title": "Relaxed \uD83D\uDE0C" },
+            { "id": 6, "title": "Irritated \uD83D\uDE12" },
+            { "id": 7, "title": "Angry \uD83D\uDE21" },
+            { "id": 8, "title": "In love ❤" }
         ],
         "aims": [
-            { "title": "Work" },
-            { "title": "Chill out" },
-            { "title": "Swim" },
-            { "title": "Workout" },
-            { "title": "Mediate" },
-            { "title": "Dance" },
-            { "title": "Coding" },
-            { "title": "Walking out" }
+            { "id": 1, "title": "Work" },
+            { "id": 2, "title": "Chill out" },
+            { "id": 3, "title": "Swim" },
+            { "id": 4, "title": "Workout" },
+            { "id": 5, "title": "Mediate" },
+            { "id": 6, "title": "Dance" },
+            { "id": 7, "title": "Coding" },
+            { "id": 8, "title": "Walking out" }
         ]
     }
 }
