[Playlists::Card, Playlists::Body]:: Implemented the foundation for playlists page. Implemented the bar UI with searching sorting tools.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
         "noImplicitAny": true,
         "noImplicitThis": true,
         "resolveJsonModule": true,
+        "downlevelIteration": true,
         "allowSyntheticDefaultImports": true,
         "module": "commonjs",
         "target": "es5",
