--- a/package.json
+++ b/package.json
@@ -1,141 +1,162 @@
 {
-    "name": "react-ssr-tutorial",
-    "private": true,
-    "engines": {
-        "node": "12"
-    },
-    "scripts": {
-        "clean": "rimraf dist",
-        "stylelint": "npx stylelint \"**/*.css\" --fix",
-        "build": "NODE_ENV=production NODE_PATH=. npm run clean && webpack --mode production",
-        "format": "prettier --write \"src/**/*.{ts,tsx}\" \"webpack/**/*.ts\"",
-        "check-types": "tsc --noEmit",
-        "start:webpack": "webpack --mode=development --watch",
-        "start:server": "nodemon index.js --watch dist/server.js",
-        "start": "NODE_ENV=development npm-run-all --print-label --parallel start:*",
-        "docker:build": "docker build -t $npm_package_name .",
-        "docker:run": "docker run -p 9001:80 $npm_package_name",
-        "docker": "npm-run-all docker:*",
-        "heroku:login": "heroku container:login",
-        "heroku:push": "heroku container:push web",
-        "heroku:release": "heroku container:release web",
-        "heroku:open": "heroku open",
-        "heroku": "npm-run-all heroku:*",
-        "heroku-init": "heroku login && heroku create $npm_package_name"
-    },
-    "dependencies": {
-        "@hot-loader/react-dom": "16.8.4",
-        "@loadable/component": "5.14.1",
-        "@loadable/server": "5.14.0",
-        "@material-ui/core": "4.11.3",
-        "b_": "1.3.4",
-        "babel-polyfill": "6.26.0",
-        "compression": "1.7.4",
-        "connected-react-router": "6.3.2",
-        "express": "4.17.1",
-        "history": "4.9.0",
-        "immer": "6.0.3",
-        "postcss-easy-import": "3.0.0",
-        "postcss-nested-props": "2.0.0",
-        "postcss-short": "5.0.0",
-        "precss": "4.0.0",
-        "query-string": "7.0.0",
-        "react": "17.0.1",
-        "react-dom": "17.0.1",
-        "react-helmet": "6.1.0",
-        "react-hot-loader": "4.8.3",
-        "react-redux": "7.2.0",
-        "react-router-dom": "5.1.2",
-        "react-slick": "0.23.2",
-        "redux": "4.0.1",
-        "redux-saga": "1.0.2",
-        "slick-carousel": "1.8.1",
-        "sugarss": "3.0.3",
-        "webpack-dev-middleware": "3.7.2",
-        "webpack-hot-middleware": "2.24.3"
-    },
-    "devDependencies": {
-        "@babel/core": "7.3.4",
-        "@babel/plugin-proposal-class-properties": "7.4.0",
-        "@babel/plugin-syntax-dynamic-import": "7.2.0",
-        "@babel/preset-env": "7.3.4",
-        "@babel/preset-react": "7.0.0",
-        "@babel/preset-typescript": "7.9.0",
-        "@babel/register": "7.4.0",
-        "@loadable/babel-plugin": "5.13.2",
-        "@loadable/webpack-plugin": "5.14.0",
-        "@types/b_": "1.3.1",
-        "@types/compression": "1.7.0",
-        "@types/compression-webpack-plugin": "2.0.1",
-        "@types/copy-webpack-plugin": "6.0.0",
-        "@types/express": "4.17.4",
-        "@types/html-webpack-plugin": "3.2.3",
-        "@types/loadable__component": "5.13.1",
-        "@types/loadable__server": "5.12.3",
-        "@types/loadable__webpack-plugin": "5.7.1",
-        "@types/mini-css-extract-plugin": "0.9.1",
-        "@types/node": "13.11.0",
-        "@types/react": "16.9.52",
-        "@types/react-dom": "16.9.8",
-        "@types/react-helmet": "6.1.0",
-        "@types/react-redux": "7.1.7",
-        "@types/react-router-dom": "5.1.3",
-        "@types/react-slick": "0.23.4",
-        "@types/redux": "3.6.0",
-        "@types/webpack": "4.41.22",
-        "@types/webpack-dev-middleware": "3.7.0",
-        "@types/webpack-dev-server": "3.11.0",
-        "@types/webpack-hot-middleware": "2.25.0",
-        "@types/webpack-node-externals": "2.5.0",
-        "autoprefixer": "9.4.10",
-        "babel-loader": "8.0.5",
-        "compression-webpack-plugin": "2.0.0",
-        "copy-webpack-plugin": "5.1.1",
-        "css-hot-loader": "1.4.4",
-        "css-loader": "2.1.1",
-        "cssnano": "4.1.10",
-        "file-loader": "3.0.1",
-        "html-webpack-plugin": "3.2.0",
-        "husky": "1.3.1",
-        "mini-css-extract-plugin": "0.5.0",
-        "nodemon": "2.0.5",
-        "npm-run-all": "4.1.5",
-        "null-loader": "4.0.1",
-        "postcss": "7.0.14",
-        "postcss-cli": "8.3.1",
-        "postcss-custom-media": "7.0.7",
-        "postcss-import": "12.0.1",
-        "postcss-import-alias-resolver": "0.1.1",
-        "postcss-load-config": "2.0.0",
-        "postcss-loader": "3.0.0",
-        "postcss-modules": "1.4.1",
-        "postcss-nested": "4.1.2",
-        "postcss-preset-env": "6.7.0",
-        "postcss-utilities": "0.8.4",
-        "prettier": "2.0.4",
-        "pretty-quick": "3.1.0",
-        "rimraf": "2.6.3",
-        "source-map-loader": "0.2.4",
-        "style-loader": "0.23.1",
-        "stylelint": "13.13.0",
-        "stylelint-config-standard": "22.0.0",
-        "ts-loader": "6.2.2",
-        "tsconfig-paths-webpack-plugin": "3.2.0",
-        "type-fest": "0.17.0",
-        "typescript": "4.0.3",
-        "url-loader": "1.1.2",
-        "webpack": "4.30.0",
-        "webpack-cli": "4.0.0",
-        "webpack-dev-server": "3.11.0",
-        "webpack-node-externals": "2.5.2",
-        "write-file-webpack-plugin": "4.5.0"
-    },
-    "browserslist": [
-        "last 2 versions"
-    ],
-    "husky": {
-        "hooks": {
-            "pre-commit": "npm run check-types && pretty-quick --staged"
-        }
+  "name": "react-ssr-tutorial",
+  "private": true,
+  "engines": {
+    "node": "12"
+  },
+  "scripts": {
+    "clean": "rimraf dis  t",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "lint": "eslint 'src/**/*.{js,ts,tsx}' --quiet --fix",
+    "stylelint": "npx stylelint \"**/*.css\" --fix",
+    "build": "NODE_ENV=production NODE_PATH=. npm run clean && webpack --mode production",
+    "format": "prettier --write \"src/**/*.{ts,tsx}\" \"webpack/**/*.ts\"",
+    "check-types": "tsc --noEmit",
+    "start:webpack": "webpack --mode=development --watch",
+    "start:server": "nodemon index.js --watch dist/server.js",
+    "start": "NODE_ENV=development npm-run-all --print-label --parallel start:*",
+    "docker:build": "docker build -t $npm_package_name .",
+    "docker:run": "docker run -p 9001:80 $npm_package_name",
+    "docker": "npm-run-all docker:*"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "post-commit": "git push origin HEAD"
     }
+  },
+  "lint-staged": {
+    "src/**/*.{js,tsx,ts}": "npm run format",
+    "src/**/*.{css}": "npm run stylelint"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
+  },
+  "dependencies": {
+    "@hot-loader/react-dom": "16.8.4",
+    "@loadable/component": "5.14.1",
+    "@loadable/server": "5.14.0",
+    "@material-ui/core": "4.11.3",
+    "b_": "1.3.4",
+    "babel-polyfill": "6.26.0",
+    "compression": "1.7.4",
+    "connected-react-router": "6.3.2",
+    "eslint": "7.25.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-import-resolver-typescript": "2.4.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsdoc": "33.0.0",
+    "eslint-plugin-prefer-arrow": "1.2.3",
+    "eslint-plugin-prettier": "3.4.0",
+    "eslint-plugin-simple-import-sort": "7.0.0",
+    "express": "4.17.1",
+    "history": "4.9.0",
+    "immer": "6.0.3",
+    "lint-staged": "10.5.4",
+    "postcss-easy-import": "3.0.0",
+    "postcss-nested-props": "2.0.0",
+    "postcss-short": "5.0.0",
+    "precss": "4.0.0",
+    "query-string": "7.0.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-helmet": "6.1.0",
+    "react-hot-loader": "4.8.3",
+    "react-redux": "7.2.0",
+    "react-router-dom": "5.1.2",
+    "react-slick": "0.23.2",
+    "redux": "4.0.1",
+    "redux-saga": "1.0.2",
+    "slick-carousel": "1.8.1",
+    "sugarss": "3.0.3",
+    "webpack-dev-middleware": "3.7.2",
+    "webpack-hot-middleware": "2.24.3"
+  },
+  "devDependencies": {
+    "@babel/core": "7.3.4",
+    "@babel/plugin-proposal-class-properties": "7.4.0",
+    "@babel/plugin-syntax-dynamic-import": "7.2.0",
+    "@babel/preset-env": "7.3.4",
+    "@babel/preset-react": "7.0.0",
+    "@babel/preset-typescript": "7.9.0",
+    "@babel/register": "7.4.0",
+    "@loadable/babel-plugin": "5.13.2",
+    "@loadable/webpack-plugin": "5.14.0",
+    "@types/b_": "1.3.1",
+    "@types/compression": "1.7.0",
+    "@types/compression-webpack-plugin": "2.0.1",
+    "@types/copy-webpack-plugin": "6.0.0",
+    "@types/express": "4.17.4",
+    "@types/html-webpack-plugin": "3.2.3",
+    "@types/loadable__component": "5.13.1",
+    "@types/loadable__server": "5.12.3",
+    "@types/loadable__webpack-plugin": "5.7.1",
+    "@types/mini-css-extract-plugin": "0.9.1",
+    "@types/node": "13.11.0",
+    "@types/react": "16.9.52",
+    "@types/react-dom": "16.9.8",
+    "@types/react-helmet": "6.1.0",
+    "@types/react-redux": "7.1.7",
+    "@types/react-router-dom": "5.1.3",
+    "@types/react-slick": "0.23.4",
+    "@types/redux": "3.6.0",
+    "@types/webpack": "4.41.22",
+    "@types/webpack-dev-middleware": "3.7.0",
+    "@types/webpack-dev-server": "3.11.0",
+    "@types/webpack-hot-middleware": "2.25.0",
+    "@types/webpack-node-externals": "2.5.0",
+    "@typescript-eslint/eslint-plugin": "4.22.0",
+    "@typescript-eslint/parser": "4.22.0",
+    "autoprefixer": "9.4.10",
+    "babel-loader": "8.0.5",
+    "compression-webpack-plugin": "2.0.0",
+    "copy-webpack-plugin": "5.1.1",
+    "css-hot-loader": "1.4.4",
+    "css-loader": "2.1.1",
+    "cssnano": "4.1.10",
+    "eslint-plugin-react": "7.23.2",
+    "file-loader": "3.0.1",
+    "html-webpack-plugin": "3.2.0",
+    "husky": "1.3.1",
+    "mini-css-extract-plugin": "0.5.0",
+    "nodemon": "2.0.5",
+    "npm-run-all": "4.1.5",
+    "null-loader": "4.0.1",
+    "postcss": "7.0.14",
+    "postcss-cli": "8.3.1",
+    "postcss-custom-media": "7.0.7",
+    "postcss-import": "12.0.1",
+    "postcss-import-alias-resolver": "0.1.1",
+    "postcss-load-config": "2.0.0",
+    "postcss-loader": "3.0.0",
+    "postcss-modules": "1.4.1",
+    "postcss-nested": "4.1.2",
+    "postcss-preset-env": "6.7.0",
+    "postcss-utilities": "0.8.4",
+    "prettier": "2.0.4",
+    "prettier-eslint": "12.0.0",
+    "pretty-quick": "3.1.0",
+    "rimraf": "2.6.3",
+    "source-map-loader": "0.2.4",
+    "style-loader": "0.23.1",
+    "stylelint": "13.13.0",
+    "stylelint-config-standard": "22.0.0",
+    "ts-loader": "6.2.2",
+    "tsconfig-paths-webpack-plugin": "3.2.0",
+    "type-fest": "0.17.0",
+    "typescript": "4.0.3",
+    "url-loader": "1.1.2",
+    "webpack": "4.30.0",
+    "webpack-cli": "4.0.0",
+    "webpack-dev-server": "3.11.0",
+    "webpack-node-externals": "2.5.2",
+    "write-file-webpack-plugin": "4.5.0"
+  },
+  "browserslist": [
+    "last 2 versions"
+  ]
 }
