--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "express": "4.17.1",
     "history": "4.9.0",
     "immer": "6.0.3",
+    "jest": "26.6.3",
     "lint-staged": "10.5.4",
     "postcss-easy-import": "3.0.0",
     "postcss-nested-props": "2.0.0",
