--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
     "@loadable/component": "5.14.1",
     "@loadable/server": "5.14.0",
     "@material-ui/core": "4.11.3",
+    "@testing-library/jest-dom": "5.12.0",
+    "@testing-library/react": "11.2.6",
+    "@types/jest": "26.0.23",
     "b_": "1.3.4",
     "babel-polyfill": "6.26.0",
     "compression": "1.7.4",
@@ -74,6 +77,7 @@
     "redux-saga": "1.0.2",
     "slick-carousel": "1.8.1",
     "sugarss": "3.0.3",
+    "ts-jest": "26.5.5",
     "webpack-dev-middleware": "3.7.2",
     "webpack-hot-middleware": "2.24.3"
   },
