--- a/package.json
+++ b/package.json
@@ -43,7 +43,10 @@
     "@material-ui/core": "4.11.3",
     "@testing-library/jest-dom": "5.12.0",
     "@testing-library/react": "11.2.6",
+    "@types/express-session": "1.17.3",
     "@types/jest": "26.0.23",
+    "@types/passport": "1.0.6",
+    "await-to-js": "3.0.0",
     "b_": "1.3.4",
     "babel-polyfill": "6.26.0",
     "compression": "1.7.4",
@@ -57,10 +60,13 @@
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-simple-import-sort": "7.0.0",
     "express": "4.17.1",
+    "express-session": "1.17.1",
     "history": "4.9.0",
     "immer": "6.0.3",
     "jest": "26.6.3",
     "lint-staged": "10.5.4",
+    "mongoose": "5.12.7",
+    "passport": "0.4.1",
     "postcss-easy-import": "3.0.0",
     "postcss-nested-props": "2.0.0",
     "postcss-short": "5.0.0",
