--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "node": "12"
   },
   "scripts": {
-    "clean": "rimraf dis  t",
+    "clean": "rimraf dist",
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint 'src/**/*.{js,ts,tsx}' --quiet --fix",
@@ -51,6 +51,8 @@
     "babel-polyfill": "6.26.0",
     "compression": "1.7.4",
     "connected-react-router": "6.3.2",
+    "cookie-parser": "1.4.5",
+    "cors": "2.8.5",
     "eslint": "7.25.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-import-resolver-typescript": "2.4.0",
